# mc-angular-service

./: pyproject.toml
src/mc_angular_service/: __init__.py
src/mc_angular_service/resources/template/: service.ts
